# CppLogger

./: CMakeLists.txt  CMakePresets.json  README.md  annotated.html  annotated_dup.js  classes.html  dir_000002_000000.html  dir_000003_000001.html  dir_000004_000001.html  dir_000005_000000.html  dir_000005_000002.html  dir_000006_000001.html  dir_22f23bf7a1ad1e3feef720791270dfb9.html  dir_22f23bf7a1ad1e3feef720791270dfb9.js  dir_22f23bf7a1ad1e3feef720791270dfb9_dep.map  dir_22f23bf7a1ad1e3feef720791270dfb9_dep.md5  dir_60c1bfca437a149f5cc0556f69e20c7d.html  dir_60c1bfca437a149f5cc0556f69e20c7d.js  dir_60c1bfca437a149f5cc0556f69e20c7d_dep.map  dir_60c1bfca437a149f5cc0556f69e20c7d_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.js  dir_7f57b1e41c5acd0e859ae5f3a2b075a9_dep.map  dir_7f57b1e41c5acd0e859ae5f3a2b075a9_dep.md5  dir_a0d713cea12394a4c028036c439896df.html  dir_a0d713cea12394a4c028036c439896df.js  dir_a0d713cea12394a4c028036c439896df_dep.map  dir_a0d713cea12394a4c028036c439896df_dep.md5  dir_ac55354187c8c6c264902bc62bdefbb0.html  dir_ac55354187c8c6c264902bc62bdefbb0.js  dir_ac55354187c8c6c264902bc62bdefbb0_dep.map  dir_ac55354187c8c6c264902bc62bdefbb0_dep.md5  dir_d58cac870c7040fab8c2b5ca0395dd06.html  dir_d58cac870c7040fab8c2b5ca0395dd06_dep.map  dir_d58cac870c7040fab8c2b5ca0395dd06_dep.md5  dir_e68e8157741866f444e17edd764ebbae.html  (+29 more)
.github/workflows/: documentation.yml  tests_linux.yml  tests_macos.yml  tests_windows.yml
d1/d01/: TestLoggerSink_8hpp__dep__incl.map  TestLoggerSink_8hpp__dep__incl.md5
d1/d03/: LogLevels_8hpp__dep__incl.map  LogLevels_8hpp__dep__incl.md5
d1/d07/: Export_8hpp__dep__incl.map  Export_8hpp__dep__incl.md5
d2/d00/: LoggerSink_8hpp.html  LoggerSink_8hpp.js  LoggerSink_8hpp_source.html
d2/d04/: LoggerSink_8cpp.html
d2/d05/: ExeConsoleLoggerSink_8cpp.html
d2/d06/: Advanced_8md.html
d3/d01/: classLogging_1_1ExeConsoleLoggerSink-members.html
d3/d05/: LoggerSink_8hpp__dep__incl.map  LoggerSink_8hpp__dep__incl.md5
d4/d00/: ExeConsoleLoggerSink_8hpp__incl.map  ExeConsoleLoggerSink_8hpp__incl.md5  namespaceLogging.html  namespaceLogging.js
d4/d02/: ExeConsoleLoggerSink_8hpp__dep__incl.map  ExeConsoleLoggerSink_8hpp__dep__incl.md5
d5/d01/: classLogging_1_1LoggerSink.html  classLogging_1_1LoggerSink.js
d5/d03/: classLogging_1_1LoggerSink-members.html  structLogging_1_1Logger-members.html
d5/d05/: advanced.html
d6/d01/: LogLevels_8hpp.html  LogLevels_8hpp.js  LogLevels_8hpp_source.html
d6/d05/: ExeConsoleLoggerSink_8cpp__incl.map  ExeConsoleLoggerSink_8cpp__incl.md5  Logger_8hpp__incl.map  Logger_8hpp__incl.md5
d7/d02/: classLogging_1_1TestLoggerSink.html  classLogging_1_1TestLoggerSink.js  classLogging_1_1TestLoggerSink__coll__graph.map  classLogging_1_1TestLoggerSink__coll__graph.md5
d7/d05/: classLogging_1_1ExeConsoleLoggerSink.html  classLogging_1_1ExeConsoleLoggerSink.js
d7/d06/: Logger_8cpp__incl.map  Logger_8cpp__incl.md5
d8/d03/: Export_8hpp.html  Export_8hpp.js  Export_8hpp_source.html
d8/d07/: TestLoggerSink_8hpp__incl.map  TestLoggerSink_8hpp__incl.md5
d9/d01/: Logger_8hpp.html  Logger_8hpp.js  Logger_8hpp_source.html
d9/d03/: Logger_8hpp__dep__incl.map  Logger_8hpp__dep__incl.md5
d9/d04/: classLogging_1_1LoggerSink__inherit__graph.map  classLogging_1_1LoggerSink__inherit__graph.md5
d9/d05/: Logger_8cpp.html
da/d06/: classLogging_1_1TestLoggerSink-members.html  main_8cpp__incl.map  main_8cpp__incl.md5
da/d07/: TestLoggerSink_8cpp__incl.map  TestLoggerSink_8cpp__incl.md5
db/d06/: classLogging_1_1ExeConsoleLoggerSink__coll__graph.map  classLogging_1_1ExeConsoleLoggerSink__coll__graph.md5
dc/d04/: TestLoggerSink_8cpp.html
dd/d00/: todo.html
dd/d02/: TestLoggerSink_8hpp.html  TestLoggerSink_8hpp.js  TestLoggerSink_8hpp_source.html
dd/d03/: Overview_8md.html
dd/d04/: LoggerSink_8cpp__incl.map  LoggerSink_8cpp__incl.md5
dd/d05/: ExeConsoleLoggerSink_8hpp.html  ExeConsoleLoggerSink_8hpp.js  ExeConsoleLoggerSink_8hpp_source.html  LoggerSink_8hpp__incl.map  LoggerSink_8hpp__incl.md5
de/d03/: structLogging_1_1Logger.html  structLogging_1_1Logger.js
df/d02/: main_8cpp.html
doc/: Doxyfile
doc/UserManual/: Advanced.md  Overview.md
headers/Logging/: ExeConsoleLoggerSink.hpp  Export.hpp  LogLevels.hpp  Logger.hpp  LoggerSink.hpp
headers/Tests/: TestLoggerSink.hpp
search/: all_0.js  all_1.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/Logging/: CMakeLists.txt  ExeConsoleLoggerSink.cpp  Logger.cpp  LoggerSink.cpp
src/Tests/: CMakeLists.txt  TestLoggerSink.cpp  main.cpp
src/Tests/DirectBuild/: CMakeLists.txt
src/Tests/SharedLibLink/: CMakeLists.txt
